chore(sync): WIP savepoint before global sync
